syntax = "proto3";

service Controller {
    /*Controls a controllable. To be controllable, the client must first register, by providing
    its name and url and implement a controllable_grpc class*/
    rpc Register(Identity) returns (RegisterReply) {}
}

message Identity {
    string name = 1; //name of the controllable
    string url = 2; // address to control the client...
}

message RegisterReply {
    string url = 1; // an url for accessing service-per-client
    string token = 2;
}
